@@ -1199,7 +1199,8 @@ LISTFILE=/resources/lists.ini
 # Other flags include EXECUTIONS, LOGINS, LOGOFFS, BIRTHS, MARRIAGES, 
 # DIVORCES, CHRISTENINGS, LEVELS, DETAILEDLEVELS, DEATHS, DETAILEDDEATHS,
 # CONQUESTS, CONCEPTIONS, NEWPLAYERS, LOSTLEVELS, PLAYERPURGES, CLANINFO,
-# WARRANTS, ACCOUNTOOC, or the names of any colors to override the default
+# WARRANTS, ACCOUNTOOC, ACCOUNTOOCNOADMIN or the names of any colors to 
+# override the default
 # All of the above flags cause those events to be automatically
 # broadcast on the given channel.
 CHANNELS=\
